Save some: [Style extract Common Style logic and Fix Broken Layout] #24
`resolved`

- 전체 layout 무너지는 현상 발생
- cuisine list color가 전체 background-color로 덮히는 문제 발생
- 찜하기 icon 안보이는 문제 발생

--- a/src/css/cuisine.css
+++ b/src/css/cuisine.css
@@ -1,23 +1,22 @@
-body {
+.total-cuisine-container {
 	background-color: #f8f8f8;
-	width: 100%;
 }
-header {
+
+.cuisine-header {
 	position: relative;
 }
+
 .cuisine-back-btn {
 	cursor: pointer;
 	position: absolute;
 	top: 30px;
 	left: 15px;
-	border: 0;
-	background-color: transparent;
+
 	color: #fff;
 	font-size: 16px;
-	outline: none;
 }
 .difficulty {
-	border: 2px solid #555;
+	border: 2px solid #888;
 	border-radius: 50%;
 	background-color: var(--main-color);
 	color: #f8f8f8;
@@ -28,15 +27,13 @@ header {
 	top: 10px;
 	right: 10px;
 }
-.img-wrapper {
+.cuisine-img-wrapper {
 	position: relative;
 }
-/* .bookmark {
-  padding: 10px;
-} */
+
 .preview {
 	height: 60px;
-	border-bottom: 2px solid #888;
+	border-bottom: 2px solid #999;
 	overflow-x: scroll;
 	white-space: nowrap;
 }
@@ -53,245 +50,179 @@ header {
 	display: inline-block;
 	cursor: pointer;
 }
-/* 데스크탑 사이즈 */
-/* @media (min-width: 1025px) {
-  .container-wrap {
-    margin: 10px 0;
-  }
-  main {
-    width: 100%;
-    font-weight: 800;
-    font-size: 0px;
-  }
-  .cuisine-container {
-    display: inline-block;
-    width: calc(100% / 3);
-    font-size: 18px;
-    font-weight: 600;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    box-sizing: border-box;
-    background-color: #fff;
-    box-shadow: 0px 3px 10px 0 rgba(0,0,0,0.1);
 
-  }
-  figure {
-    max-width: 90%;
-    margin: 0 auto;
-    box-sizing: border-box;
-    background-color: #fff;
-  }
-  img {
-   transform: scale(1.5);
-  }
-  .img-wrapper {
-    width: 100%;
-    height: 350px;
-    overflow: hidden;
-  }
-  figcaption {
-    display: inline-block;
-    margin-left: 10px;
-    margin-bottom: 10px;
-    margin-top: 20px;
-  }
-  .fa-bookmark {
-    margin-top: 10px;
-    margin-right: 10px;
-    float: right;
-  }
-  .fa-bookmark::after {
-    content: '';
-    display: block;
-    clear: both;
-  }
-} */
+/* 공통 style */
+.container-wrap {
+	margin: 10px 0;
+}
 
-/* 중간 사이즈 */
+.cuisine-main {
+	width: 100%;
+	color: #333;
+	font-weight: 600;
+	margin: 0 auto;
+	font-size: 18px;
+}
+
+.cuisine-container {
+	width: 90%;
+	margin: auto;
+	margin-bottom: 20px;
+	background-color: #fff;
+}
+
+.cuisine-img-wrapper {
+	margin-bottom: 20px;
+	width: 100%;
+	height: 330px;
+	transform-origin: scale(1.5);
+}
+
+.cuisine-img-wrapper img {
+	width: 100%;
+	max-height: 90%;
+}
+
+.cuisine-img-name {
+	display: inline-block;
+	margin-left: 10px;
+	position: relative;
+	color: #333;
+	font-size: 18px;
+}
+
+.bookmark {
+	margin-top: 10px;
+	margin-right: 20px;
+	float: right;
+	font-size: 20px;
+	position: absolute;
+	bottom: 10px;
+	right: 0;
+}
+
+.fa-bookmark {
+	margin-top: 10px;
+	margin-right: 20px;
+	float: right;
+	position: absolute;
+	bottom: 10px;
+	right: 0;
+}
+
 @media (min-width: 768px) {
-	.container-wrap {
-		margin: 10px 0;
-	}
-	main {
-		width: 100%;
-		color: #333;
+	.cuisine-main {
 		font-size: 18px;
-		font-weight: 600;
-		margin: 0 auto;
 	}
-	.cuisine-container {
-		width: 90%;
-		margin: auto;
-		margin-bottom: 20px;
-		background-color: #fff;
-	}
-	figure {
-		background-color: #fff;
-		width: 48%;
-		float: left;
-		border: 5px solid transparent;
+
+	.container-wrap {
+		margin: 40px 0;
 		display: flex;
-		flex-flow: row wrap;
-		justify-content: space-between;
-		margin-bottom: 40px;
-		box-sizing: border-box;
-		margin: 1%;
+		flex-wrap: wrap;
 	}
-	img {
-		width: 100%;
-		margin-bottom: 10px;
-		display: block;
+
+	.cuisine-container {
+		width: 45%;
 	}
-	.img-wrapper {
-		width: 100%;
-		height: 330px;
-		overflow: hidden;
-		transform-origin: scale(1.5);
-	}
-	figcaption {
-		/* display: inline-block; */
-		margin-left: 10px;
-		float: left;
-		padding: 10px 0;
-	}
+
 	.cuisine {
-		/* content: '';
-    display: block;
-    clear: both; */
+		width: 100%;
+		box-sizing: border-box;
+		padding: 10px;
+		box-sizing: border-box;
 		position: relative;
+		border: 5px solid transparent;
 	}
-	.fa-bookmark {
-		margin-top: 10px;
-		margin-right: 20px;
-		float: right;
-		position: absolute;
-		bottom: 10px;
-		right: 0;
+
+	.cuisine-img-name {
+		font-size: 24px;
+	}
+
+	/* 여기부터 */
+	.bookmark {
+		font-size: 28px;
 	}
 }
 
 /* 모바일 사이즈 */
 @media (min-width: 375px) and (max-width: 767px) {
-	.container-wrap {
-		margin: 10px 0;
-	}
-	main {
-		width: 100%;
-		color: #333;
+	.cuisine-main {
 		font-size: 14px;
-		font-weight: 600;
-		margin: 0 auto;
-	}
-	.cuisine-container {
-		width: 85%;
-		margin: auto;
-		margin-bottom: 20px;
-		background-color: #fff;
 	}
 
-	figure {
+	.cuisine-container {
+		width: 85%;
+	}
+
+	.cuisine {
 		width: 100%;
-		display: flex;
-		flex-flow: row wrap;
 		box-sizing: border-box;
-		justify-content: space-between;
 		padding: 10px;
 		box-sizing: border-box;
+		position: relative;
 	}
-	img {
-		width: 100%;
-		max-height: 90%;
-	}
-	.img-wrapper {
-		/* margin-bottom:20px ; */
-		width: 100%;
+
+	.cuisine-img-wrapper {
 		height: 300px;
 		transform-origin: scale(1.7);
 	}
-	figcaption {
-		display: inline-block;
-		margin-left: 10px;
-		width: 100%;
-		position: relative;
+
+	.cuisine-img-name {
+		font-size: 22.5px;
 	}
 
-	.cuisine {
-		position: relative;
-	}
-	.fa-bookmark {
-		margin-top: 10px;
-		margin-right: 20px;
-		float: right;
-		position: absolute;
-		bottom: 10px;
-		right: 0;
+	/* 여기부터 */
+	.bookmark {
+		font-size: 25px;
 	}
 }
 @media (min-width: 319px) and (max-width: 374px) {
-	.container-wrap {
-		margin: 10px 0;
-	}
-	main {
-		width: 100%;
-		color: #333;
+	.cuisine-main {
 		font-size: 14px;
-		font-weight: 600;
-		margin: 0 auto;
-	}
-	.cuisine-container {
-		width: 85%;
-		margin: auto;
-		margin-bottom: 20px;
-		background-color: #fff;
 	}
 
-	figure {
-		width: 100%;
-		display: flex;
-		flex-flow: row wrap;
-		box-sizing: border-box;
-		justify-content: space-between;
-		padding: 10px;
-		box-sizing: border-box;
-	}
-	img {
-		width: 100%;
-		max-height: 90%;
-	}
-	.img-wrapper {
-		/* margin-bottom:20px ; */
-		width: 100%;
-		height: 200px;
-		transform-origin: scale(1.5);
-	}
-	figcaption {
-		display: inline-block;
-		margin-left: 10px;
+	.cuisine-container {
+		width: 85%;
 	}
 
 	.cuisine {
+		width: 100%;
+		box-sizing: border-box;
+		padding: 10px;
+		box-sizing: border-box;
 		position: relative;
 	}
-	.fa-bookmark {
-		margin-top: 10px;
-		margin-right: 20px;
-		float: right;
-		position: absolute;
-		bottom: 10px;
-		right: 0;
+
+	.cuisine-img-wrapper {
+		height: 200px;
+		transform-origin: scale(1.5);
+	}
+
+	.cuisine-img-name {
+		display: inline-block;
+		margin-left: 10px;
+		font-size: 18px;
+		color: #333;
+	}
+	.bookmark {
+		font-size: 20px;
 	}
 }
 .popup {
-	border: 1px solid;
+	border: none;
+	border-radius: 5px;
 	text-align: center;
+	line-height: 1.4;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	width: 200px;
-	height: auo;
-
-	background-color: #fff;
-	padding: 20px;
+	height: 50px;
+	background-color: #f8f8f8;
+	padding: 15px;
 	position: fixed;
 	z-index: 2;
-	top: 40%;
+	top: 35%;
 	left: 50%;
 	transform: translateX(-50%);
 	display: none;
